[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
]

[project.urls]
Homepage="https://github.com/GeeeekExplorer/nano-vllm"

[dependency-groups]
dev = [
    "setuptools>=70.1",
    "wheel",
    "ninja",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]

[tool.uv]
required-version = ">=0.10.0"
# flash-attn does not declare torch in build-system.requires; inject it for isolated builds.
extra-build-dependencies = { flash-attn = ["torch", "ninja"] }

extra-build-variables = { flash-attn = { MAX_JOBS = "4" } }

[[tool.uv.index]]
name = "nju-pypi"
url = "https://mirror.nju.edu.cn/pypi/web/simple/"
default = true

[[tool.uv.index]]
name = "nju-pytorch-cu128"
url = "https://mirror.nju.edu.cn/pytorch/whl/cu128/"
explicit = true

[tool.uv.sources]
torch = { index = "nju-pytorch-cu128" }
